--- a/CropLicensePlate.ipynb
+++ b/CropLicensePlate.ipynb
@@ -433,6 +433,15 @@
     "#     return contours\n",
     "contours = findLicensePlate('.\\\\Desktop\\\\5.jpg')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pytesseract as tes"
+   ]
   }
  ],
  "metadata": {
