--- a/CropLicensePlate.ipynb
+++ b/CropLicensePlate.ipynb
@@ -1281,6 +1281,93 @@
    "source": [
     "print(vgg16_feature)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ADMINS\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:27: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "import os\n",
+    "license_cascade = cv2.CascadeClassifier('vn2.xml')\n",
+    "\n",
+    "img_path = 'M:\\\\Project2_data\\\\GreenParking\\\\'\n",
+    "\n",
+    "count = '1'\n",
+    "count_str = 1\n",
+    "\n",
+    "def findLargestArea(longList):\n",
+    "    biggest_A = 0\n",
+    "    for contour in longList:\n",
+    "        x,y,w,h = contour\n",
+    "        A = w*h\n",
+    "        if (A > biggest_A):\n",
+    "            license_plate = np.array([[x,y,w,h]])\n",
+    "            biggest_A = A\n",
+    "    return license_plate\n",
+    "\n",
+    "\n",
+    "for i in os.listdir(img_path):\n",
+    "    image = cv2.imread(img_path+i)\n",
+    "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    license = license_cascade.detectMultiScale(gray, 1.3,5)\n",
+    "    if(license == ()):\n",
+    "        continue\n",
+    "    license = findLargestArea(license)\n",
+    "    img = image[license[0,1]:(license[0,1]+license[0,3]),license[0,0]:(license[0,0]+license[0,2])]\n",
+    "    cv2.imwrite(('M:\\\\Project2_data\\\\crop_by_cascade\\\\'+count+'.jpg'), img) \n",
+    "    count_str += 1\n",
+    "    count = str(count_str)\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "()\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "tuple indices must be integers or slices, not tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-39-654ae68860fb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mlicense\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlicense_cascade\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdetectMultiScale\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1.3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlicense\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mimg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mimage\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mlicense\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlicense\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mlicense\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlicense\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlicense\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mlicense\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: tuple indices must be integers or slices, not tuple"
+     ]
+    }
+   ],
+   "source": [
+    "image = cv2.imread(img_path+'100.jpg')\n",
+    "gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "# plt.imshow(gray)\n",
+    "license = license_cascade.detectMultiScale(gray, 1.3,5)\n",
+    "print(license)\n",
+    "img = image[license[0,1]:(license[0,1]+license[0,3]),license[0,0]:(license[0,0]+license[0,2])]\n",
+    "plt.imshow(img)"
+   ]
   }
  ],
  "metadata": {
