--- a/Trainning window.ipynb
+++ b/Trainning window.ipynb
@@ -142,7 +142,7 @@
    "outputs": [],
    "source": [
     "img_path = 'M:\\\\Project2_data\\\\GreenParking\\\\'\n",
-    "image = cv2.imread(img_path,0)\n",
+    "# image = cv2.imread(img_path,0)\n",
     "# (303, 472)\n",
     "count = '1'\n",
     "count_str = 1\n",
@@ -257,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
