--- a/Regconize digits.ipynb
+++ b/Regconize digits.ipynb
@@ -392,6 +392,25 @@
     "for i in list_test:\n",
     "    print('#{}'.format(i))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sympy as s\n",
+    "\n",
+    "print(list(s.primerange(0,50)))"
+   ]
   }
  ],
  "metadata": {
@@ -410,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
